# squad-ai

./: .gitattributes  .gitignore  README.md  defiant.html
Brainstorming/Autospec/backend/: README.md  plan_breach.json  pyproject.toml
Brainstorming/lunii_pack_generator/: .gitignore  TECHNICAL_DOC.md  pyproject.toml
Brainstorming/trading_agents/: CLAUDE.md  main.py  pyproject.toml
Brainstorming/trading_agents/docs/: api.md  (+2 more)
FulfillFormWithAI/: .llm.env.yaml  conversation.txt  filled_form.json  filled_form_flat.json  form groups answers.txt  libs_install.bat  old_requirements.txt  pyproject.toml  requirements.txt
FulfillFormWithAI/config/: LID_form.yaml  country_allowed_values.yaml  form_ex1.yaml  user_and_training_info_form.yaml  utm_medium_allowed_values.yaml
FulfillFormWithAI/src/: agent_audio.py  agent_tools.py  agents.py  agents_graph.py  form_html_renderer.py  form_service.py  form_workflow_graph.py  graph_workflow_form.py  helper.py  llm_service.py  llm_workflow_agent.py  main.py  static_workflow_form.py
LudoAppoinmentTaker/: calendar_agent.py  calendar_agent.yaml  lead_agent.py  main.py  pyproject.toml  sf_agent.py  sf_agent.yaml  test_conversation.py
LudoAppoinmentTaker/app/: agent_wf_factory.py  agents_graph.py  api_config.py  audio_processing.py  business_logic.py  communication_type_enum.py  conversation_handler.py  endpoints.py  graph.py  incoming_phone_call_handler.py  incoming_sms_handler.py  logic.py  main.py  phone_call_websocket_events_handler.py  speech_to_text.py  startup.py  terminal_events_handler.py  text_to_speech.py
LudoAppoinmentTaker/llms/: langchain_adapter_type.py  langchain_factory.py  llm_info.py
LudoAppoinmentTaker/tests/: incoming_text_manager_test.py  test_agents_graph.py  test_audio_streaming.py  test_calendar_agent.py  test_incoming_phone_call_handler.py  test_incoming_phone_call_manager.py  test_incoming_text_handler.py  test_incoming_text_manager.py  test_outgoing_audio_manager.py  test_strong_types.py  test_terminal_events_handler.py  test_text_processing.py  test_text_queue_manager.py  test_twilio_audio_sender.py
ML1/: README_DATASET_CONFIG.md  main.py  pyproject.toml  visualize.py
ML1/.claude/: settings.local.json
ML1/configs/: boston_housing.json  iris.json  mnist.json  wine_quality.json
ML1/processed_data/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
ML1/src/: dataset_loader.py  preprocess_data.py  train_model.py
PIC-Prospect_Incoming_Callbot/: .env.sample  .gitlab-ci.yml  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  Dockerfile.GCP  Dockerfile.local  HOW_TO_CONFIG_DOCKER.md  README.md  activate_venv.bat  docker_gcp_build_and_deploy.bat  docker_gcp_deploy.bat  docker_local_build.bat  docker_local_build_run.bat  env-file-backup-25-09-10.rar.old  google-credentials.json  mkdocs.yml  old_docker_gcp_build_and_deploy.bat  old_docker_gcp_deploy.bat  package-lock.json  pyproject.toml  pyrightconfig.json  ruff.toml  service-account-1.json  test_rag_client_improved.py
PIC-Prospect_Incoming_Callbot/.claude/: settings.local.json
PIC-Prospect_Incoming_Callbot/app/: api_config.py  endpoints.py  incoming_sms_handler.py  phone_call_websocket_events_handler.py  terminal_events_handler.py
PIC-Prospect_Incoming_Callbot/docs/: GCP-deployment.fr.md  GCP-deployment.md  google-calendar-setup.md  index.md  latency_monitoring.md
PIC-Prospect_Incoming_Callbot/examples/: calendar_provider_example.py
PIC-Prospect_Incoming_Callbot/llms/: langchain_adapter_type.py  langchain_factory.py  llm_info.py
PIC-Prospect_Incoming_Callbot/scripts/: build_docs.py  dev_with_docs.py  test_docs_integration.py  verify_docs_setup.py
PIC-Prospect_Incoming_Callbot/tests/: conftest.py  incoming_phone_call_manager_test.py  incoming_text_manager_test.py  test_LID_insertion.py  test_strong_types.py  test_stt_audio_transcription.py  test_terminal_events_handler.py  test_text_processing.py  test_text_queue_manager.py  test_twilio_audio_sender.py
StrongTypes/: README.md  get_last_version_of_lib.bat  get_next_version_of_lib.bat  libs_build.bat  main.py  pyproject.toml  setup.py
StrongTypes/src/: decorators.py  dynamic_type_analyzer.py  static_type_analyzer.py
StrongTypes/strong_types/: decorators.py  dynamic_type_analyzer.py  static_type_analyzer.py
StrongTypes/tests/: test_all_cases.py  test_complex_types.py  test_dynamic_analyzer.py  test_runtime_checking.py
TDDCoder/: .windsurf_rules.yaml  bowling_scoring.json  lint_results_2025-06-29_01-42-17.txt  lint_results_2025-06-29_13-04-44.txt  lint_results_2025-06-29_13-14-12.txt  lint_results_2025-07-02_14-13-09.txt  lint_results_2025-07-06_01-13-50.txt  main.py  pyproject.toml  pytest.ini  verify_prompts.py
TDDCoder/src/: bank_bdd.md  bank_test.py  leetcode_test.py  main.py
TDDCoder/tests/: README.md  test_analyst_agent.py  test_implementation_integration.py  test_integration.py  test_linter.py  test_po_agent.py  test_prompt_loading.py  test_tdd_workflow_graph.py
skillforge-backend/: .dockerignore  .env.sample  .gitignore  .llm.env.yaml  AZURE_ARTIFACTS_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml  uv.lock.prev
skillforge-backend/.azure/: azure-pipelines.yaml
skillforge-backend/.claude/: settings.local.json
skillforge-backend/docker/: Dockerfile
skillforge-backend/docs/: aicommontools-setup.md  index.md  modules.md
skillforge-backend/prompts/: chain_of_density_summarization_french.txt  query_course_content_prompt.txt  summarize_content_compact_prompt.txt  summarize_content_full_prompt.txt  summarize_content_light_prompt.txt
skillforge-backend/scripts/: build_docs.py  install_aicommontools.py
skillforge-backend/src/: api_config.py  dependency_injection_config.py  drop_all_tables.sql  envvar.py  startup.py
skillforge-backend/test-frontend/: .env.sample  .gitignore  API_CONNECTION_CHECK.md  CLAUDE.md  COURSE_HIERARCHY.md  PLANNING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  TODO.md  chatbot.py  pyproject.toml  startup.py
skillforge-backend/tests/: __init__.py  conftest.py
(+3155 files in other folders)
