[project]
name = "ludoappoinmenttaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "gevent>=25.4.2",
    "google-api-python-client>=2.167.0",
    "google-cloud-speech>=2.32.0",
    "google-cloud-texttospeech>=2.26.0",
    "langgraph>=0.1.1", # Added langgraph
    "openai>=1.75.0",
    "pandas-gbq>=0.28.0",
    "parameterized>=0.9.0",
    "pydub>=0.25.1",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "twilio>=9.5.2",
    "uvicorn>=0.34.2",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pylint>=3.3.6",
    "pytest>=8.3.5",
]
