[project]
name = "prospect-incoming-callbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "gevent>=25.4.2",
    "google-api-python-client>=2.167.0",
    "google-cloud-speech>=2.32.0",
    "google-cloud-texttospeech>=2.26.0",
    "langgraph>=0.1.1", # Added langgraph
    "openai>=1.75.0",
    "pandas-gbq>=0.28.0",
    "parameterized>=0.9.0",
    "pydub>=0.25.1",
    "pyshould>=0.7.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "twilio>=9.5.2",
    "uvicorn>=0.34.2",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
    "langchain-core>=0.3.57",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.21.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "deptry>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["app"]


[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["app"]
