[project]
name = "lunii-pack-generator"
version = "0.1.0"
description = "Générateur automatique de packs Lunii depuis une arborescence MP3"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
lunii-gen = "lunii_pack_generator.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
