[project]
name = "trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "anthropic>=0.105.2",
    "ib-insync>=0.9.86",
    "kaleido>=1.3.0",
    "pyarrow>=24.0.0",
    "vectorbt>=1.0.0",
    "yfinance>=1.4.1",
]
