[project]
name = "autospec"
version = "0.1.0"
description = "Autospec: BMAD-driven spec-to-code factory. PM/PO/Dev agents turn a feature idea into epics, Gherkin user stories and BDD/TDD-implemented code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # Providers hors abonnement Claude (M1) : connexion LLM via LangChain.
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autospec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
