[project]
name = "ai-project-manager-backend"
version = "0.1.0"
description = "AI Project Manager - FastAPI backend (V0 MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    # LangChain core is pulled in for BaseMessage / ChatPromptTemplate types used
    # alongside common-tools' Llm.ainvoke(). The LLM adapters themselves
    # (langchain-openai, langchain-anthropic, etc.) come with common-tools.
    "langchain-core>=0.3.0",
]

# NOTE on common-tools:
# `common-tools` is NOT declared as a PyPI dependency because it is consumed in
# editable mode from a local checkout. Install it manually BEFORE running
# `pip install -e ".[dev]"` on this project:
#
#     pip install -e "${COMMONTOOLS_LOCAL_PATH}"
#
# The path is provided via the COMMONTOOLS_LOCAL_PATH env var (see .env.example).
# See start.md for the full installation walkthrough.

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
