[project]
name = "neat-flappy-lab"
version = "0.1.0"
description = "NEAT + gradient-descent (imitation) neuroevolution lab playing a Flappy-like game, with a live-visualizable backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
nfl = "nfl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
